--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
-    margin: 0;
+    margin-top: 1rem;
 }
 
 /* Container */
@@ -27,6 +27,8 @@ main {
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     max-width: 400px;
     width: 100%;
+    margin: auto;
+    overflow: hidden;
 }
 
 /* Buttons */
